<resources>
    <string name="app_name" translatable="false">Bookshelf</string>
    <string name="candide" translatable="false">Candide</string>
    <string name="_1675" translatable="false">1675</string>
    <string name="voltaire" translatable="false">Voltaire</string>
    <string name="published_in">Date:</string>
    <string name="author_name">Author:</string>
    <string name="book_title">Title:</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_a_book">Add a book</string>
</resources>