<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateBookActivity">


    <EditText
        android:id="@+id/f_createBook_edt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/candide"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/f_createBook_txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        app:layout_constraintBottom_toTopOf="@+id/f_createBook_edt_title"
        app:layout_constraintStart_toStartOf="@+id/f_createBook_edt_title" />

    <EditText
        android:id="@+id/f_createBook_edt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/voltaire"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/f_createBook_edt_title" />

    <TextView
        android:id="@+id/f_createBook_txv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        app:layout_constraintBottom_toTopOf="@+id/f_createBook_edt_name"
        app:layout_constraintStart_toStartOf="@+id/f_createBook_edt_name" />

    <EditText
        android:id="@+id/f_createBook_edt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_1675"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/f_createBook_edt_name" />

    <TextView
        android:id="@+id/f_createBook_txv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published_in"
        app:layout_constraintBottom_toTopOf="@+id/f_createBook_edt_date"
        app:layout_constraintStart_toStartOf="@+id/f_createBook_edt_date" />

    <Button
        android:id="@+id/f_createBook_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:onClick="createBook"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/f_createBook_edt_date" />


</androidx.constraintlayout.widget.ConstraintLayout>